# nolan

./: .gitignore  Cargo.toml  LICENSE  README.md  bindings.md  roadmap.md  rustfmt.toml  sketch.nln  stuff.md
.github/workflows/: release.yml
src/: ast.rs  error.rs  lexer.rs  main.rs  parser.rs  typechecker.rs  types.rs
src/error/: lex.rs  mod.rs  parse.rs
src/lexer/: error.rs  mod.rs
src/parser/: ast.rs  error.rs  mod.rs  pattern.rs
src/parser/test/: math-expr-result.txt  math-expr.nln  stmt-result.txt  stmt.nln
src/typechecker/: error.rs  mod.rs  scope.rs  types.rs
