[package]
name = "nolan"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/bichanna/termess"
authors = ["Nobuharu Shimazu <nobu.bichanna@gmail.com>"]
license = "MIT"

[dependencies]
logos = "0.14.0"
snailquote = "0.3.1"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.8.0"
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# CI backends to support
ci = ["github"]
# A GitHub repo to push Homebrew formulas to
tap = "bichanna/nolan"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Publish jobs to run in CI
pr-run-mode = "plan"
