[package]
name = "nolan"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/bichanna/nolan"
authors = ["Nobuharu Shimazu <nobu.bichanna@gmail.com>"]
license = "MIT"

[dependencies]
ariadne = "~0.4.0"
logos = "~0.14.0"
snailquote = "~0.3.1"
string-interner = "~0.17.0"
thiserror = "~1.0.57"

[dev-dependencies]
similar-asserts = "~1.5"
